:white_check_mark: 데이터 조회 변경